--- a/www/form.html
+++ b/www/form.html
@@ -29,7 +29,7 @@
 			      		<img id="previous" onclick="p()" src="img/previous.png" style="margin-left: -400px;position: absolute;" />
 			      		<img id="next" onclick="n()" src="img/next.png" style="margin-left: 550px;position: absolute" />
 			      		<img id="submit" src="img/submit.png" onclick="set();n();" style="cursor: pointer;width: 250px;height: 80px;margin-left: 50px;display: none"/>
-			      		<img id="quit" src="img/submit.png" onclick="exitFromApp()" style="cursor: pointer;width: 250px;height: 80px;margin-left: 50px;display: none"/>
+			      		<img id="quit" src="img/submit.png" onclick="exitFromApp()" style="display: none; cursor: pointer;width: 250px;height: 80px;margin-left: 50px;"/>
 			      		
 			      	</div> 		
 				</form>
