--- a/www/form.html
+++ b/www/form.html
@@ -29,7 +29,6 @@
 			      		<img id="previous" onclick="p()" src="img/previous.png" style="margin-left: -400px;position: absolute;" />
 			      		<img id="next" onclick="n()" src="img/next.png" style="margin-left: 550px;position: absolute" />
 			      		<img id="submit" src="img/submit.png" onclick="set();n();" style="cursor: pointer;width: 250px;height: 80px;margin-left: 50px;display: none"/>
-			      				
 			      	</div> 		
 				</div>
 			</div>	
@@ -47,7 +46,7 @@
 		function getDate(){
 			//Get Current Date
 			var currentdate = new Date(); 
-			return date = currentdate.getDate()+"-"+ (currentdate.getMonth()+1)+ "-" + currentdate.getFullYear();
+			return date = currentdate.getMinutes()+":"+currentdate.getHours()+"    "+currentdate.getDate()+"-"+ (currentdate.getMonth()+1)+ "-" + currentdate.getFullYear();
 		}
 		var flag = 0;
         function set(){
