--- a/www/form.html
+++ b/www/form.html
@@ -46,7 +46,7 @@
 		function getDate(){
 			//Get Current Date
 			var currentdate = new Date(); 
-			return date = currentdate.getMinutes()+":"+currentdate.getHours()+"    "+currentdate.getDate()+"-"+ (currentdate.getMonth()+1)+ "-" + currentdate.getFullYear();
+			return date = currentdate.getHours()+":"+currentdate.getMinutes()+"    "+currentdate.getDate()+"-"+ (currentdate.getMonth()+1)+ "-" + currentdate.getFullYear();
 		}
 		var flag = 0;
         function set(){
