--- a/www/form.html
+++ b/www/form.html
@@ -91,7 +91,7 @@
 			  xmlhttp=new ActiveXObject("Microsoft.XMLHTTP");
 			  }
 			
-			xmlhttp.open("GET","http://embeddedsoft.ro/test/getuser.php?f="+encodeURIComponent(first)+"&l="+encodeURIComponent(last)+"&e="+encodeURIComponent(email)+"&g="+encodeURIComponent(gender)+"&b="+encodeURIComponent(birth)+"&c="+encodeURIComponent(country),true);
+			xmlhttp.open("GET","http://costerdiamonds.com/tablet/getuser.php?f="+encodeURIComponent(first)+"&l="+encodeURIComponent(last)+"&e="+encodeURIComponent(email)+"&g="+encodeURIComponent(gender)+"&b="+encodeURIComponent(birth)+"&c="+encodeURIComponent(country),true);
 			xmlhttp.send();
 		}
 		
