--- a/www/form.html
+++ b/www/form.html
@@ -29,7 +29,6 @@
 			      		<img id="previous" onclick="p()" src="img/previous.png" style="margin-left: -400px;position: absolute;" />
 			      		<img id="next" onclick="n()" src="img/next.png" style="margin-left: 550px;position: absolute" />
 			      		<img id="submit" src="img/submit.png" onclick="set();n();" style="cursor: pointer;width: 250px;height: 80px;margin-left: 50px;display: none"/>
-			      				
 			      	</div> 		
 				</div>
 			</div>	
@@ -92,7 +91,7 @@
 			  xmlhttp=new ActiveXObject("Microsoft.XMLHTTP");
 			  }
 			
-			xmlhttp.open("GET","http://costerdiamonds.com/tablet/getuser.php?f="+encodeURIComponent(first)+"&l="+encodeURIComponent(last)+"&e="+encodeURIComponent(email)+"&g="+encodeURIComponent(gender)+"&b="+encodeURIComponent(birth)+"&c="+encodeURIComponent(country),true);
+			xmlhttp.open("GET","http://embeddedsoft.ro/test/getuser.php?f="+encodeURIComponent(first)+"&l="+encodeURIComponent(last)+"&e="+encodeURIComponent(email)+"&g="+encodeURIComponent(gender)+"&b="+encodeURIComponent(birth)+"&c="+encodeURIComponent(country),true);
 			xmlhttp.send();
 		}
 		
